# thread-continuity

./: .gitignore  .mcp.json  DISTRIBUTION.md  GOAL.md  LICENSE  PRD_TRACE.md  README.md  RESULT.md  WORKLOG.md  pyproject.toml
.codex-plugin/: plugin.json
graphics/: README.md
scripts/: install-local.sh
skills/thread-continuity/: SKILL.md
social/: 2026-06-17-thread-continuity-omnisocials-create-result.json  2026-06-17-thread-continuity-omnisocials-draft-pack.json  2026-06-17-thread-continuity-omnisocials-draft-pack.md  2026-06-17-thread-continuity-omnisocials-schedule-result.json
tests/: test_thread_continuity.py
thread_continuity/: __init__.py  adapters.py  api.py  bootstrap.py  cli.py  eval.py  export.py  models.py  server.py  sources.py  store.py  utils.py
